--- a/Client/.eslintrc.json
+++ b/Client/.eslintrc.json
@@ -1,9 +1,6 @@
 {
-    "rules": {
-      "no-unused-vars": [
-        "error",
-        { "varsIgnorePattern": "^_", "argsIgnorePattern": "^_" }
-      ]
-    }
+  "rules": {
+    "no-unused-vars": "off",
+    "eqeqeq": "off"
   }
-  
+}
