--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   },
   "dependencies": {
     "npm-run-all": "^4.1.5"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
