--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "npm-run-all": "^4.1.5"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "cross-env": "^7.0.3"
   }
 }
