--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "npm-run-all --parallel start:server start:client",
     "start:server": "cd Server && npm start",
-    "start:client": "cd Client && npm start"
+    "start:client": "cd Client && npm run build"
   },
   "dependencies": {
     "npm-run-all": "^4.1.5"
