--- a/Server/package.json
+++ b/Server/package.json
@@ -6,7 +6,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "build": "npm install && cd ../Client && npm install && npm run build",
+    "server": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
