--- a/Server/package.json
+++ b/Server/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js",
-    "build": "npm install && cd ../Client && npm install && npm run build",
+    "build": "cd ../Client && npm run build",
     "server": "nodemon app.js"
   },
   "keywords": [],
