--- a/Client/package.json
+++ b/Client/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts start && cd ../Server && npx nodemon app.js",
-    "build": "react-scripts build",
+    "build": "react-scripts build  && cd ../Server && npx nodemon app.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
