--- a/Client/package.json
+++ b/Client/package.json
@@ -21,7 +21,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start && cd ../Server && npx nodemon app.js",
+    "start": "react-scripts start && cd ../Server && node --max_old_space_size=400 app.js --production",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
