--- a/Client/package.json
+++ b/Client/package.json
@@ -21,8 +21,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start && cd ../Server && node --max_old_space_size=2048 app.js --production",
-    "build": "react-scripts build",
+    "start": "react-scripts start && cd ../Server && node --max_old_space_size=4096 app.js --production",
+    "build": "react-scripts build  && cd ../Server && node --max_old_space_size=4096 app.js --production",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
